# Data2Evidence-coding-agent-tools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  d2e.code-workspace
.opencode/: README.md
.opencode/commands/: breakdown.md  cohorts-dev.md  concept-sets-dev.md  dev-ui-cohorts.md  dev-ui-concept-sets.md  dev-ui-import-map-overrides.md  dev-ui-verify.md  five.md  implement.md  knowledge-curator.md  knowledge-expert.md  maint-knowledge-curator.md  prd.md  quickfix.md  smallfeature.md  task-breakdown.md  task-implement.md  task-prd.md  task-quickfix.md  task-small-feature.md  verify-ui.md
docs/openapi/: OPENAPI_STYLE.md
knowledge/: INDEX.md  README.md  cdm-config.md  cohort-builder.md  functions.md  logto-auth.md  single-spa.md
knowledge/architecture/: single-spa.md
scripts/: d2e-ui-hot-deploy.sh
skills/breakdown/: SKILL.md
skills/cohorts-dev/: SKILL.md
skills/concept-sets-dev/: SKILL.md
skills/d2e-import-map-overrides/: SKILL.md
skills/data2evidence-code-rag/: SKILL.md
skills/dev-functions/: SKILL.md
skills/dev-openapi-spec/: SKILL.md
tools/code-rag/: .env.example  Dockerfile  Makefile  README.md  constraints.txt  docker-compose.yml  pyproject.toml
tools/code-rag/app/: __init__.py  api.py  checkpoint.py  chunking.py  cli.py  config.py  embeddings.py  git.py  ingest.py  loaders.py  manifest.py  retrieve.py  store.py
tools/code-rag/docs/: llama-cpp-setup.md
tools/code-rag/evals/: questions.yml
tools/code-rag/scripts/: qdrant_snapshots.py  run_with_llama.sh  start_llama.sh  stop_llama.sh
tools/code-rag/tests/: test_loaders.py
(+171 files in other folders)
